--- a/_layouts/repository.html
+++ b/_layouts/repository.html
@@ -5,35 +5,34 @@ layout: single
 {% if page.repolink %}
   {% capture repolink %}{{ page.repolink }}{% endcapture %}
 {% else %}
-  {% capture repolink %}https://github.com/{{site.github_username}}/{{ page.reponame }}{% endcapture %}
+  {% capture repolink %}https://github.com/{{ site.github_username }}/{{ page.reponame }}{% endcapture %}
 {% endif %}
 
 {% if page.repodoc %}
-  {% capture repodoc %}{{ page.repodoc }}{% endcapture %}
-{% else %}
   {% if jekyll.environment == "production" %}
-    {% capture repodoc %}/{{page.reponame}}/{% endcapture %}
+    {% capture repodoc %}/{{ page.reponame }}/{% endcapture %}
   {% else %}
-    {% capture repodoc %}https://{{site.github_username}}.github.io/{{page.reponame}}/{% endcapture %}
+    {% capture repodoc %}https://{{ site.github_username }}.github.io/{{ page.reponame }}/{% endcapture %}
   {% endif %}
 {% endif %}
 
 <div class="container" style="max-width:800px; margin: 0 auto; padding: 20px; text-align: center;">
-  <!-- Intestazione -->
-  <h1 style="font-size:2.5em; margin-bottom:10px;">{{ page.title }}</h1>
-  <p style="font-size:1.2em; color:#555;">Benvenuto nella pagina della repository <strong>{{ page.reponame }}</strong>!</p>
+  <p style="font-size:1.2em; color:#555;">
+    Benvenuto nella pagina della repository <strong>{{ page.reponame }}</strong>!
+  </p>
   
-  <!-- Pulsanti per Repository e Documentazione -->
-  <div style="margin: 30px 0;">
-    <a href="{{ repolink }}" style="display:inline-block; margin: 0 10px; padding: 10px 20px; background-color:#4078c0; color:#fff; text-decoration:none; border-radius:5px;">
+  <div class="button-container" style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; margin: 30px 0;">
+    <a href="{{ repolink }}" style="padding: 10px 20px; background-color:#4078c0; color:#fff; text-decoration:none; border-radius:5px; display: flex; align-items: center;">
       <i class="fab fa-github" style="margin-right:5px;"></i> Visualizza Repository
     </a>
-    <a href="{{ repodoc }}" style="display:inline-block; margin: 0 10px; padding: 10px 20px; background-color:#6cc644; color:#fff; text-decoration:none; border-radius:5px;">
+    
+    {% if page.repodoc %}
+    <a href="{{ repodoc }}" style="padding: 10px 20px; background-color:#6cc644; color:#fff; text-decoration:none; border-radius:5px; display: flex; align-items: center;">
       <i class="fas fa-book" style="margin-right:5px;"></i> Visualizza Documentazione
     </a>
+    {% endif %}
   </div>
 
-  <!-- Contenuto aggiuntivo -->
   <div class="content" style="text-align:left; margin-top:20px;">
     {{ content }}
   </div>
