--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,23 +2,8 @@
 layout: archive
 ---
 
-TEST TEST TEST TEST AAAA
+I have a solid academic foundation in Computer Engineering, complemented by hands-on experience in programming, industrial automation, and robotics. My ability to manage complex projects is demonstrated by my proficiency in time management and my commitment to meeting deadlines, even under pressure. My education has taught me to identify priorities and accurately estimate the time required to complete complex projects, as evidenced by my thesis project, which involved resolving technical challenges and implementing innovative solutions.
 
-{{ content }}
+My strong communication and interpersonal skills have allowed me to collaborate effectively with colleagues and interdisciplinary teams. I pride myself on managing active communication and demonstrating empathy for the needs of my teammates, as I believe that active listening and understanding diverse perspectives are essential to achieving the best outcomes.
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
-
-{% if paginator %}
-  {% assign posts = paginator.posts %}
-{% else %}
-  {% assign posts = site.posts %}
-{% endif %}
-
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-<div class="entries-{{ entries_layout }}">
-  {% for post in posts %}
-    {% include archive-single.html type=entries_layout %}
-  {% endfor %}
-</div>
-
-{% include paginator.html %}
+Furthermore, I have gained experience in programming (C, C++, Python, Java), industrial automation (PLC, Simulink, LabVIEW, CODESYS) and robotics (ROS, ROS 2, robot simulation and control), which empowers me to address today’s technical challenges with both competence and creativity. My proficiency with document and markup tools such as LaTeX and Markdown has allowed me to meticulously document projects and results, an essential attribute in a professional environment that values quality and clarity.
